# cdkey

./: .gitignore  Animate.lsl  Collapsed.lsl  Community Dolls Key Help and Manual  Dress.lsl  LinkListen.lsl  Linked Calls  Main.lsl  Makefile.in  MenuHandler.lsl  Poses.lsl  README  README.dev  RLV.lsl  Start.lsl  Taker.lsl  Transform.lsl  configure  configure.ac
data/: DataAppearance.txt  DataAttachments.txt  DataMessages.txt  DataRLV.txt  DataServices.txt
doc/: Advanced Features  Community Dolls Key Developer's Manual  Community Dolls Key Help and Manual  Hardcore  Internal Commands  Settings  Startup Notes
doc/dev/: UI-DialogMenus
lsl/: Dress.lsl  Main.lsl  MenuHandler.lsl  Poses.lsl  RLV.lsl  Start.lsl  Taker.lsl  Transform.lsl
lsl/preprocessor/: Main.lslp  MenuHandler.lslp  RLV.lslp  Start.lslp  Taker.lslp  Transform.lslp
lsl/preprocessor/include/: GlobalDefines.lsl  Utility.lsl
nc/: Glow Settings  IntroText  Message Strings  Preferences Example
scripts/: preprocess.sh
server/: KeyServer.lsl  OnlineServices.lslp  README  UpdateClient.lslp  service.php
src/: Aux.lsl  Aux.lslp  Avatar.lsl  Avatar.lslp  ChatHandler.lsl  CheckRLV.lsl  Dress.cpp  Dress.lsl  Dress.lslp  KeySpecific-Filigree.lsl  KeySpecific-Soen.lsl  LinkListen.lsl  Main.cpp  Main.lsl  Main.lslp  Makefile  Makefile.in  MenuHandler.cpp  MenuHandler.lsl  MenuHandler.lslp  New.lsl  README.RLV  README.RLVok  README.allowed  README.compile  README.listener  README.permissions  README.startup  RLV.cpp  RLV.lslp  ServiceReceiver.lsl  ServiceReceiver.lslp  ServiceRequester.lsl  ServiceRequester.lslp  Start.cpp  Start.lsl  Start.lslp  StatusRLV.lsl  StatusRLV.lslp  Taker.lsl  (+11 more)
src/include/: CommonGlobals.lsl  Config.lsl  Follow.inc  GlobalDefines.lsl  Json.lsl  KeySharedFuncs.lsl  LinkMessage.lsl  Listeners.lsl  README  RestrainedLoveAPI.lsl  ServiceIncludes.lsl  Utility.lsl  Wear.lsl  config.h  config.h.in
types/: *Display  *Domme  *Japanese  *Regular  *Sexy  *Submissive
